traefik/dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-dashboard
  namespace: traefik
spec:
  redirectRegex:
    regex: "^https://traefik\\.mykubernetes\\.com/?$"
    replacement: "https://traefik.mykubernetes.com/dashboard/"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.mykubernetes.com`) && Path(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-dashboard
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.mykubernetes.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-cert
